--- a/QA.Service/OA.Service.csproj
+++ b/QA.Service/OA.Service.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  
+	  
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QA.Data\OA.Data.csproj" />
+    <ProjectReference Include="..\QA.Repo\OA.Repo.csproj" />
+  </ItemGroup>
 
 </Project>
