--- a/OnionArchitecture.Web/appsettings.json
+++ b/OnionArchitecture.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SANISHA\\SQLEXPRESS;Database=OnionArchitecture;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
