--- a/OnionArchitecture.Web/OnionArchitecture.Web.csproj
+++ b/OnionArchitecture.Web/OnionArchitecture.Web.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QA.Data\OA.Data.csproj" />
     <ProjectReference Include="..\QA.Repo\OA.Repo.csproj" />
     <ProjectReference Include="..\QA.Service\OA.Service.csproj" />
